--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ google-auth>=2.34.0
 google-auth-oauthlib>=1.2.0
 imapclient>=3.0
 httpx[http2]>=0.27.0
+h2>=4.1.0
+hypercorn>=0.14.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 PyJWT>=2.8.0
