Add debtor management system
- Add database schema for debtor management (debtor_reports, debtors, communication_logs)
- Extend pharmacies table with banking and API key fields
- Add debtor router with endpoints for upload, list, statistics, send-email, send-sms, download-csv, download-pdf
- Add PDF parser for extracting debtor data from reports
- Add helper functions for medical aid detection, email/SMS templates, API key encryption
- Add Pydantic schemas for all debtor models
- Add dependencies: pandas, pdfminer.six, sendgrid, requests, fpdf2
- Add helper script for configuring pharmacy settings
- Add comprehensive documentation

--- a/pharma_api/requirements.txt
+++ b/pharma_api/requirements.txt
@@ -10,4 +10,10 @@ PyJWT>=2.9.0
 cryptography>=45.0.0
 httpx[http2]>=0.27.2
 email-validator>=2.0.0
+pandas>=2.3.1
+pymupdf>=1.26.3
+pdfminer.six>=20231228
+sendgrid>=6.11.0
+requests>=2.32.4
+fpdf>=1.7.2
 
