--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==45.0.6
 numpy==2.3.2
 pandas==2.3.1
 pdfminer.six==20250506
+pymupdf>=1.26.3
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
